# tkmreader

./: .clang  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .vimrc  CHANGELOG  CMakeLists.txt  LICENSE  README.md
cmake/: Packing.cmake
debian/: changelog  control  rules  tkmreader.install
shared/: Defaults.h.in  EnvelopeReader.cpp  EnvelopeReader.h  EnvelopeWriter.cpp  EnvelopeWriter.h  Helpers.cpp  Helpers.h  IAsyncEnvelope.h  Query.cpp  Query.h
source/: Application.cpp  Application.h  Arguments.cpp  Arguments.h  CMakeLists.txt  Command.cpp  Command.h  Connection.cpp  Connection.h  DataSource.h  Defaults.h.in  Dispatcher.cpp  Dispatcher.h  IDatabase.h  JsonWriter.cpp  JsonWriter.h  Main.cpp  Query.cpp  Query.h  SQLiteDatabase.cpp  SQLiteDatabase.h
tests/: CMakeLists.txt  gtest_application.cpp
tests/assets/: taskmonitor.conf
